fix: align in game card

--- a/src/sass/components/mainGame/_cardGame.scss
+++ b/src/sass/components/mainGame/_cardGame.scss
@@ -5,8 +5,10 @@
   background-size: contain;
 }
 .card-game{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 250px;
-  padding: 0 20px 0;
   border-radius: 8px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 0 1px 0 rgba(0, 0, 0, 0.12);
   filter: drop-shadow(2px 4px 6px black);
@@ -44,7 +46,7 @@
     line-height: 0.9;
   }
   &--quest{
-    padding: 70px 0px 10px;
+    margin-bottom: 10px;
   }
   &--translate{
     font-size: $primary-font-size + 2px;
@@ -52,6 +54,8 @@
 }
 .separator{
   margin-bottom: 10px;
+  width: 80%;
+  align-self: center;
   hr{
     border: none;
 	  border-top: 1px solid $color-target-word;
