--- a/src/sass/components/media/_media-main-game.scss
+++ b/src/sass/components/media/_media-main-game.scss
@@ -24,6 +24,7 @@
     }
   }
   .button__main-game {
+    margin-bottom: 2px;
     width: 84px;
     font-size: 13px;
   }
